# write_nostr

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.flatpak-builder/checksums/: x86_64-com.writenostr.desktop.yml
.github/workflows/: publish.yml  release.yml
.superpowers/sdd/: progress.md
build-aux/: signing-key.pub
build-aux/flatpak/: com.writenostr.desktop.desktop  com.writenostr.desktop.metainfo.xml  com.writenostr.desktop.yml
docs/superpowers/plans/: 2026-07-05-nip51-private-lists.md
docs/superpowers/specs/: 2026-07-05-nip51-private-lists-design.md
scripts/: README.md  deploy-remote.sh  dev-tauri.mjs  serve.mjs  spa-http-server.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: db.ts  embeddings.test.ts  embeddings.ts  graph.test.ts  graph.ts  lru.ts  tauri.ts
src/lib/components/: ArticleCard.svelte  ArticleView.svelte  AuthGate.svelte  Editor.svelte  InteractionButtons.svelte  Nav.svelte  SemanticSearch.svelte  TranslateButton.svelte
src/lib/nostr/: fetch.ts  listCrypto.test.ts  listCrypto.ts  lists.test.ts  lists.ts  profiles.ts  publish.ts  resolve.ts
src/lib/stores/: auth.ts  bookmarks.ts  categorizedLists.ts  drafts.ts  nwc.ts  pins.ts  profiles.ts  relays.ts  social.ts
src/lib/utils/: markdown.ts  nip19.ts  translate.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/drafts/: +page.svelte
static/: disgus.js  manifest.webmanifest  sw.js
(+8 files in other folders)
