[package]
name = "write-nostr"
version = "0.1.2"
description = "A minimalist writing space on Nostr"
authors = ["write_nostr <lostcause@3nostr.com>"]
edition = "2021"

[lib]
name = "write_nostr_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
